<?xml version="1.0"?>
<package>
  <name>dslam_bag</name>
  <version>0.0.0</version>
  <description>The dslam_bag package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kent.sommer13@gmail.com">Kent Sommer</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ecl_build</build_depend>
  <build_depend>ecl_time</build_depend>
  <build_depend>ecto</build_depend>
  <build_depend>ecto_ros</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>dslam_ecto_vision</build_depend> 

  <run_depend>ecl_build</run_depend>
  <run_depend>ecl_time</run_depend>
  <run_depend>ecto</run_depend>
  <run_depend>ecto_ros</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>dslam_ecto_vision</run_depend>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
